--- a/provider/Cargo.toml
+++ b/provider/Cargo.toml
@@ -12,3 +12,8 @@ readme.workspace = true
 
 [dependencies]
 rtherm-common = { workspace = true }
+tokio = { version = "1", features = ["full"] }
+reqwest = { version = "0.11", default-features = false, features = [
+    "json",
+    "rustls-tls",
+] }
