--- a/provider/Cargo.toml
+++ b/provider/Cargo.toml
@@ -17,3 +17,5 @@ reqwest = { version = "0.11", default-features = false, features = [
     "json",
     "rustls-tls",
 ] }
+serde = { version = "1.0.193", features = ["derive"] }
+toml = "0.8.8"
