--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -15,5 +15,8 @@ sqlite = []
 
 [dependencies]
 rtherm-common = { workspace = true }
+tokio = { version = "1", features = ["full"] }
 actix-web = "4"
 actix-files = "0.6.2"
+serde = { version = "1.0.193", features = ["derive"] }
+toml = "0.8.8"
