--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -21,3 +21,4 @@ actix-files = "0.6.2"
 serde = { version = "1.0.193", features = ["derive"] }
 toml = "0.8.8"
 teloxide = { version = "0.12", features = ["macros"] }
+chrono = "0.4.31"
