--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -22,3 +22,4 @@ serde = { version = "1.0.193", features = ["derive"] }
 toml = "0.8.8"
 teloxide = { version = "0.13", features = ["macros"] }
 chrono = "0.4.31"
+diesel = { version = "2.2.0", features = ["postgres", "sqlite"] }
