--- a/provider/Cargo.toml
+++ b/provider/Cargo.toml
@@ -10,6 +10,11 @@ repository.workspace = true
 license.workspace = true
 readme.workspace = true
 
+[features]
+default = ["w1_therm"]
+w1_therm = []
+dummy = []
+
 [dependencies]
 rtherm-common = { workspace = true }
 tokio = { version = "1", features = ["full"] }
@@ -19,3 +24,4 @@ reqwest = { version = "0.11", default-features = false, features = [
 ] }
 serde = { version = "1.0.193", features = ["derive"] }
 toml = "0.8.8"
+futures = "0.3.30"
