--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,7 +11,9 @@ license.workspace = true
 readme.workspace = true
 
 [features]
-sqlite = []
+default = ["postgres"]
+postgres = ["sqlx/postgres"]
+sqlite = ["sqlx/sqlite"]
 
 [dependencies]
 rtherm-common = { workspace = true }
@@ -22,3 +24,4 @@ serde = { version = "1.0.193", features = ["derive"] }
 toml = "0.8.8"
 teloxide = { version = "0.13", features = ["macros"] }
 chrono = "0.4.31"
+sqlx = { version = "0.8.2", features = ["runtime-tokio", "chrono"] }
