--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ readme = "README.md"
 
 [workspace.dependencies]
 rtherm-common = { path = "common" }
+futures = "0.3.30"
+tokio = { version = "1", features = ["full"] }
