--- a/provider/Cargo.toml
+++ b/provider/Cargo.toml
@@ -16,12 +16,12 @@ w1_therm = []
 dummy = []
 
 [dependencies]
-rtherm-common = { workspace = true }
-tokio = { version = "1", features = ["full"] }
+rtherm-common.workspace = true
+futures.workspace = true
+tokio.workspace = true
 reqwest = { version = "0.11", default-features = false, features = [
     "json",
     "rustls-tls",
 ] }
 serde = { version = "1.0.193", features = ["derive"] }
 toml = "0.8.8"
-futures = "0.3.30"
