--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,17 +11,19 @@ license.workspace = true
 readme.workspace = true
 
 [features]
-default = ["postgres"]
+default = ["postgres", "telegram"]
 postgres = ["sqlx/postgres"]
 sqlite = ["sqlx/sqlite"]
+telegram = ["teloxide"]
 
 [dependencies]
-rtherm-common = { workspace = true }
-tokio = { version = "1", features = ["full"] }
+rtherm-common.workspace = true
+futures.workspace = true
+tokio.workspace = true
 actix-web = "4"
 actix-files = "0.6.2"
 serde = { version = "1.0.193", features = ["derive"] }
 toml = "0.8.8"
-teloxide = { version = "0.13", features = ["macros"] }
+teloxide = { version = "0.13", features = ["macros"], optional = true }
 chrono = "0.4.31"
 sqlx = { version = "0.8.2", features = ["runtime-tokio", "chrono"] }
