--- a/server/config/example.toml
+++ b/server/config/example.toml
@@ -1,7 +1,10 @@
 [http]
 host = "0.0.0.0"
 port = 8080
-prefix = ""
+# prefix = ""
 
-[telegram]
-token = "1234567890:ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghi"
+[db.sqlite]
+path = "../data/database.db"
+
+# [telegram]
+# token = "1234567890:ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghi"
