--- a/server/docker/docker-compose.yml
+++ b/server/docker/docker-compose.yml
@@ -3,6 +3,8 @@ version: "3"
 services:
   rtherm-server:
     image: rtherm-server:latest
+    user: "1000"
+    restart: unless-stopped
     environment:
       - RTHERM_CONFIG=docker.toml
     volumes:
@@ -21,3 +23,12 @@ services:
       - POSTGRES_DB=rtherm
     volumes:
       - /data/rtherm/postgres:/var/lib/postgresql/data
+
+  grafana:
+    image: grafana/grafana-oss:11.2.0
+    user: "1000"
+    restart: unless-stopped
+    volumes:
+      - /data/rtherm/grafana:/var/lib/grafana
+    ports:
+      - 3000:3000
