--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,7 @@ readme = "README.md"
 rtherm-common = { path = "common" }
 futures = "0.3.30"
 tokio = { version = "1", features = ["full"] }
+chrono = "0.4.31"
+sqlx = { version = "0.8.2", features = ["runtime-tokio", "chrono"] }
+log = "0.4.22"
+env_logger = "0.11.5"
