--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rtherm-server"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 description = "RTherm server"
@@ -11,7 +11,7 @@ license.workspace = true
 readme.workspace = true
 
 [features]
-default = ["postgres", "telegram"]
+default = ["postgres", "sqlite", "telegram"]
 postgres = ["sqlx/postgres"]
 sqlite = ["sqlx/sqlite"]
 telegram = ["teloxide"]
@@ -25,5 +25,7 @@ actix-files = "0.6.2"
 serde = { version = "1.0.193", features = ["derive"] }
 toml = "0.8.8"
 teloxide = { version = "0.13", features = ["macros"], optional = true }
-chrono = "0.4.31"
-sqlx = { version = "0.8.2", features = ["runtime-tokio", "chrono"] }
+chrono.workspace = true
+sqlx.workspace = true
+log.workspace = true
+env_logger.workspace = true
