--- a/server/docker/docker-compose.yml
+++ b/server/docker/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     restart: unless-stopped
     environment:
       - RTHERM_CONFIG=docker.toml
+      - RUST_LOG=debug
     volumes:
       - /data/rtherm/server:/srv
     ports:
@@ -16,7 +17,7 @@ services:
 
   postgres:
     image: postgres:14
-    restart: always
+    restart: unless-stopped
     environment:
       - POSTGRES_USER=rtherm
       - POSTGRES_PASSWORD=rtherm
