--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,7 +14,7 @@ readme.workspace = true
 default = ["postgres", "sqlite", "telegram"]
 postgres = ["sqlx/postgres"]
 sqlite = ["sqlx/sqlite"]
-telegram = ["teloxide"]
+telegram = ["frankenstein"]
 
 [dependencies]
 rtherm-common.workspace = true
@@ -24,7 +24,9 @@ actix-web = "4"
 actix-files = "0.6.2"
 serde = { version = "1.0.193", features = ["derive"] }
 toml = "0.8.8"
-teloxide = { version = "0.13", features = ["macros"], optional = true }
+frankenstein = { version = "0.35", default-features = false, features = [
+    "async-http-client",
+], optional = true }
 chrono.workspace = true
 sqlx.workspace = true
 log.workspace = true
