--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rtherm-client"
-version = "0.2.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 description = "RTherm client"
 authors.workspace = true
