--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rtherm-server"
-version = "0.2.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 description = "RTherm server"
 authors.workspace = true
