--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,7 @@ futures = "0.3.30"
 tokio = { version = "1", features = ["full"] }
 chrono = "0.4.31"
 sqlx = { version = "0.8.2", features = ["runtime-tokio", "chrono"] }
+serde = { version = "1.0.193", features = ["derive"] }
+toml = "0.8.8"
 log = "0.4.22"
 env_logger = "0.11.5"
