--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -11,5 +11,4 @@ license.workspace = true
 readme.workspace = true
 
 [dependencies]
-serde = { version = "1.0.193", features = ["derive"] }
-serde_json = "1.0.109"
+serde.workspace = true
