--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -22,8 +22,9 @@ futures.workspace = true
 tokio.workspace = true
 actix-web = "4"
 actix-files = "0.6.2"
-serde = { version = "1.0.193", features = ["derive"] }
-toml = "0.8.8"
+serde.workspace = true
+serde_json = "1.0.109"
+toml.workspace = true
 frankenstein = { version = "0.35", default-features = false, features = [
     "async-http-client",
 ], optional = true }
